Ingress/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: tomcat
  labels:
    name: tomcat
spec:
  containers:
  - name: tomcat
    image: shivakumar1702/customtomcat:5
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 8080
