Ingress/ingress.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat
spec:
  selector:
    matchLabels:
      app: tomcat
  template:
    metadata:
      labels:
        app: tomcat
    spec:
      containers:
      - name: tomcat
        image: shivakumar1702/customtomcat:5
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: tomcat-service
spec:
  selector:
    app: tomcat
  ports:
  - port: 8080
    targetPort: 8080
---
#path based routing
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: tomcat-ingress
#   labels:
#     name: tomcat-ingress
# spec:
#   rules:
#   - host: foo.bar.com
#     http:
#       paths:
#       - path: /app
#         pathType: Prefix
#         backend:
#           service:
#             name: tomcat-service
#             port: 
#               number: 8080
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: nginx-service
#             port: 
#               number: 80
---

#host based routing

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: host-based-ingress
  labels:
    name: host-based-ingress
spec:
  rules:
  - host: tomcat.app.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: tomcat-service
            port: 
              number: 8080
  - host: nginx.app.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-service
            port: 
              number: 80
